update welcome index

--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -27,10 +27,14 @@
   <div style="text-align: center;">
     <img src="img/mobile_bsg_logo_120x120.png" style="height: 80px;">
     <p style="font-size: 22px;margin: 10px 0" >北京首通证券香港集团有限公司</p>
-    <p style="font-size: 12px;margin: 10px 0; color: #89A2E4" >微信公众号: BJSTGROUP</p>
   </div>
 
   <hr class="style-two" style="margin-top: 30px;">
+
+  <div style="text-align: center;">
+    <p style="text-align: center"><img src="img/weixin_qr_code.jpg" style="height: 90px;"></p>
+    <p style="font-size: 14px;margin-top: -15px; color: #89A2E4" >微信公众号: BJSTGROUP</p>
+  </div>
 
   <p style="font-size: 16px; text-align: center; color: #D17A9A">
     您好，我是北京首通证券香港集团<br>
@@ -189,9 +193,29 @@
 
     <span>
       这就是香港，一个让您实现财富飞跃的地方。心动不如行动，立即莅临北京首通证券香港集团有限公司，成就美丽人生
-      <br>注：（图片来源于网络）
+      <br><br>注：（图片来源于网络）
     </span>
   </p>
+
+  <style>
+
+    .create_account {
+      background-color: #00B7FF; display: inline-block; padding: 12px 22px;
+      text-decoration: none;
+      color: #FFFFFF;
+      font-weight: bold;
+    }
+
+
+  </style>
+
+  <p style="text-align:center;"><a href="/appointment" class="create_account" style="">按此可立即开立港股帐户</a></p>
+
+  <div style="text-align: center; margin-top: 20px;">
+    <p style="text-align: center"><img src="img/weixin_qr_code.jpg" style="height: 90px;"></p>
+    <p style="font-size: 14px;margin-top: -15px; color: #89A2E4" >微信公众号: BJSTGROUP</p>
+  </div>
+
 
 </body>
 
