update landing page

--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -36,12 +36,12 @@
     <p style="font-size: 14px;margin-top: -15px; color: #89A2E4" >微信公众号: BJSTGROUP</p>
   </div>
 
-  <p style="font-size: 16px; text-align: center; color: #D17A9A">
+  <p style="font-size: 16px; text-align: center; color: #D17A9A; line-height: 27px;">
     您好，我是北京首通证券香港集团<br>
     这有一封神秘的信件<br>开启信封<br>您可以找到无数个投资香港资本市场的理由<br>让您紧握港股先机<br>坐享财富红利
   </p>
 
-  <div class="message1">
+  <!--<div class="message1">
     <img src="img/pin.png" class="pin">
     1、有人说，香港是东方之珠
   </div>
@@ -80,9 +80,9 @@
     <span>世界性的国际机场</span>
     <br>
     <br>
-  </p>
+  </p>-->
 
-  <div class="message1">
+  <!--<div class="message1">
     <img src="img/pin.png" class="pin">
     2、有人说，香港<br>是休闲娱乐的购物天堂
   </div>
@@ -122,18 +122,19 @@
     <span>香港海洋公园</span>
     <br>
     <br>
-  </p>
+  </p>-->
 
   <div class="message1">
     <img src="img/pin.png" class="pin">
-    3、有人说，香港是<br>世界第三大金融中心
+    1、有人说，香港是<br>亚洲的金融中心
   </div>
 
-  <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 250px">
-    完善的基础设施<br>为经济发展营造了良好的环境<br>
-    迅捷的信息服务<br>为资金流动创造了便捷的通道<br>
-    健全的法律监管<br>为金融运作提供了安全的保障<br>
-    这里是香港<br>一个大有可为、遍地黄金的投资市场<br>
+  <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 410px">
+    她作为国际航运的枢纽<br>从小渔村发展为繁华的国际大都会<br><br>
+    她拥有完善的基础设施<br>为经济飞速发展营造了良好的环境<br><br>
+    她提供迅捷的信息服务<br>为资金流动创造了便捷有效的通道<br><br>
+    她制定健全的法律体系<br>给金融运作提供了安全可靠的保障<br><br>
+    这里是香港<br>一个充满投资机遇的金融都市<br>
     <div class="ribbon-wrapper-green"><div class="ribbon-green"></div></div>
   </div>​
 
@@ -167,15 +168,46 @@
 
   <div class="message1">
     <img src="img/pin.png" class="pin">
-    4、有人说，北京首通证券香港集团是最棒的
+    2、有人说<br>香港是全球十大“投资圣地”之一
   </div>
 
-  <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 364px">
-    我们有伟大的愿景<br>让中华民族成为世界上最有钱的民族。<br>
-    我们有多元化的服务<br>为投资者提供<br>证券买卖、投资咨询、IPO等服务<br>
-    我们有专业的投资团队<br>让投资者尽享一对一的专业服务<br>
-    我们有成熟稳定的交易系统<br>为投资者网上及流动装置提供股票交易和金融信息行情<br>
-    我们有安全可靠的资产存管保障<br>为投资者的资产提供银行第三方存管<br>
+  <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 450px">
+    因为深港通<br>港股低估值面临20年<br>一遇的重大投资机遇<br><br>
+    因为深港通<br>投资蓝筹港股<br>券商股等将给您带来巨大收益<br><br>
+    因为深港通<br>港股市场成为<br>国内外资金的兵家必争之地<br><br>
+    这里是香港<br>一个大有可为<br>遍地黄金的投资市场<br><br>
+    <div class="ribbon-wrapper-green"><div class="ribbon-green"></div></div>
+  </div>​
+
+  <p class="img-board">
+    <img src="img/pic19.jpg">
+    <br>
+    <span>即将开启的深港通</span>
+    <br>
+    <br>
+    <img src="img/pic20.jpg">
+    <br>
+    <span>捕捉港股上涨机遇</span>
+    <br>
+    <br>
+    <img src="img/pic21.jpg">
+    <br>
+    <span>遍地黄金的香港</span>
+    <br>
+    <br>
+  </p>
+
+  <div class="message1">
+    <img src="img/pin.png" class="pin">
+    3、有人说<br>北京首通证券香港集团是最棒的投资平台
+  </div>
+
+  <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 470px">
+    我们有伟大的愿景<br>让中华民族成为世界上最有钱的民族。<br><br>
+    我们有多元化的服务<br>为投资者提供<br>证券买卖、投资咨询、IPO等服务<br><br>
+    我们有专业的投资团队<br>让投资者尽享一对一的专业服务<br><br>
+    我们有成熟稳定的交易系统<br>为投资者网上及流动装置提供股票交易和金融信息行情<br><br>
+    我们有安全可靠的资产存管保障<br>为投资者的资产提供银行第三方存管<br><br>
 
     <div class="ribbon-wrapper-green"><div class="ribbon-green"></div></div>
   </div>​
@@ -191,8 +223,10 @@
     <br>
     <br>
 
-    <span>
-      这就是香港，一个让您实现财富飞跃的地方。心动不如行动，立即莅临北京首通证券香港集团有限公司，成就美丽人生
+    <span style="line-height: 25px;">
+      这就是香港，一个让您实现财富飞跃的地方。<br>心动不如行动，紧握深港通的暴富机遇<br>
+      <a href="/appointment" class="create_account" style="">按此可立即获取港股帐户</a>
+      <br>成就美丽人生！
       <br><br>注：（图片来源于网络）
     </span>
   </p>
@@ -200,16 +234,18 @@
   <style>
 
     .create_account {
-      background-color: #00B7FF; display: inline-block; padding: 12px 22px;
+      background-color: #00B7FF; display: inline-block; padding: 4px 9px;
       text-decoration: none;
       color: #FFFFFF;
       font-weight: bold;
+      margin: 5px 7px;
+      line-height: 20px;
     }
 
 
   </style>
 
-  <p style="text-align:center;"><a href="/appointment" class="create_account" style="">按此可立即开立港股帐户</a></p>
+  <p style="text-align:center;"></p>
 
   <div style="text-align: center; margin-top: 20px;">
     <p style="text-align: center"><img src="img/weixin_qr_code.jpg" style="height: 90px;"></p>
