--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -139,29 +139,39 @@
   </div>​
 
   <p class="img-board">
-    <img src="img/pic11.jpg">
+    <img src="img/pic22.jpg">
     <br>
-    <span>纷繁交错的高速公路</span>
-    <br>
-    <br>
-    <img src="img/pic12.jpg">
-    <br>
-    <span>青马大桥</span>
+    <span>繁华的香港</span>
     <br>
     <br>
-    <img src="img/pic13.jpg">
+    <img src="img/pic23.jpg">
+    <br>
+    <span>香港的金融区</span>
+    <br>
+    <br>
+    <img src="img/pic24.jpg">
+    <br>
+    <span>完善的法治体制</span>
+    <br>
+    <br>
+    <img src="img/pic25.jpg">
+    <br>
+    <span>繁忙的集装箱码头</span>
+    <br>
+    <br>
+    <img src="img/pic26.jpg">
+    <br>
+    <span>世界性的国际机场</span>
+    <br>
+    <br>
+    <img src="img/pic27.jpg">
     <br>
     <span>先进的信息服务</span>
     <br>
     <br>
-    <img src="img/pic14.jpg">
+    <img src="img/pic28.jpg">
     <br>
     <span>香港证监会</span>
-    <br>
-    <br>
-    <img src="img/pic15.jpg">
-    <br>
-    <span>香港交易所</span>
     <br>
     <br>
   </p>
