--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -178,7 +178,7 @@
 
   <div class="message1">
     <img src="img/pin.png" class="pin">
-    2、有人说<br>香港是全球十大“投资圣地”之一
+    2、有人说<br>香港是全球最具投资价值的地方
   </div>
 
   <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 450px">
@@ -233,12 +233,29 @@
     <br>
     <br>
 
-    <span style="line-height: 25px;">
+    <!--<span style="line-height: 25px;">
       这就是香港，一个让您实现财富飞跃的地方。<br>心动不如行动，紧握深港通的暴富机遇<br>
       <a href="/appointment" class="create_account" style="">按此可立即获取港股帐户</a>
       <br>成就美丽人生！
       <br><br>注：（图片来源于网络）
-    </span>
+    </span>-->
+  </p>
+
+  <div class="message1">
+    <img src="img/pin.png" class="pin">
+    4、这就是香港<br>一个让您实现财富飞跃的地方
+  </div>
+
+  <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 130px">
+    心动不如行动<br></同>紧握深港通的暴富机遇<br>
+    <a href="/appointment" class="create_account" style="">按此可立即获取港股帐户</a>
+    <br>成就美丽人生！
+
+    <div class="ribbon-wrapper-green"><div class="ribbon-green"></div></div>
+  </div>​
+
+  <p class="img-board">
+    <span style="line-height: 25px;">注：（图片来源于网络）</span>
   </p>
 
   <style>
