update landing page

--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -37,8 +37,7 @@
   </div>
 
   <p style="font-size: 16px; text-align: center; color: #D17A9A; line-height: 27px;">
-    您好，我是北京首通证券香港集团<br>
-    这有一封神秘的信件<br>开启信封<br>您可以找到无数个投资香港资本市场的理由<br>让您紧握港股先机<br>坐享财富红利
+    您好，这有一封神秘的信件<br>开启信封<br>您可以找到无数个投资香港资本市场的理由<br>让您紧握港股先机<br>坐享财富红利
   </p>
 
   <!--<div class="message1">
@@ -151,7 +150,7 @@
     <br>
     <img src="img/pic24.jpg">
     <br>
-    <span>完善的法治体制</span>
+    <span>完善的法治体系</span>
     <br>
     <br>
     <img src="img/pic25.jpg">
@@ -182,7 +181,7 @@
   </div>
 
   <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 450px">
-    因为深港通<br>港股低估值面临20年<br>一遇的重大投资机遇<br><br>
+    因为深港通<br>港股低估值面临<br>20年一遇的重大投资机遇<br><br>
     因为深港通<br>投资蓝筹港股<br>券商股等将给您带来巨大收益<br><br>
     因为深港通<br>港股市场成为<br>国内外资金的兵家必争之地<br><br>
     这里是香港<br>一个大有可为<br>遍地黄金的投资市场<br><br>
@@ -213,7 +212,7 @@
   </div>
 
   <div class="wrapper" style="text-align: center; font-size: 16px; padding: 30px 0; line-height: 30px; height: 470px">
-    我们有伟大的愿景<br>让中华民族成为世界上最有钱的民族。<br><br>
+    我们有伟大的愿景<br>让中华民族成为世界上最有钱的民族<br><br>
     我们有多元化的服务<br>为投资者提供<br>证券买卖、投资咨询、IPO等服务<br><br>
     我们有专业的投资团队<br>让投资者尽享一对一的专业服务<br><br>
     我们有成熟稳定的交易系统<br>为投资者网上及流动装置提供股票交易和金融信息行情<br><br>
